# Intro-to-CUDA

./: .gitignore  CMakeLists.txt  scatter_gather.cu
01_kernel_basics/: hello_world.cu  host_device_annotations.cu  laplace_operator.cu  laplace_operator_cpu.cpp  laplace_operator_cpu.cu  launch_config.cu  launch_latency.cu  saxpy_cpu.cu  saxpy_finished.cu  saxpy_shmoo.cu  saxpy_unfinished.cu  tail_effect.cu  thread_divergence.cu  thread_divergence_stalls.cu  warp_sync.cu
02_memory/: copy_kernel.cu  cpu_cpu_bandwidth.cu  cpu_gpu_bandwidth.cu  gpu_gpu_bandwidth.cu  memory_spaces.cu
03_parallel_reduction/: cpu_reduction.cu  gpu_reduction.cu  gpu_reduction_shmem.cu  gpu_reduction_shmem_solution.cu  gpu_reduction_thrust.cu  gpu_reduction_two_pass.cu  gpu_reduction_two_pass_solution.cu
04_streams/: streams_for_concurrent_kernels.cu  streams_for_concurrent_kernels_monolithic.cu  streams_for_concurrent_kernels_solution.cu  streams_for_data_movement.cu  streams_for_data_movement_solution.cu
05_bugs/: bug_1.cu  bug_2.cu  bug_3.cu  bug_4.cu  bug_5.cu  bug_6.cu  bug_exercise.cu  bug_exercise_solution.cu
06_profiling/: nvtx_example.cu  particle_system_aos.cu  particle_system_soa.cu
06_profiling/box_blur/: box_blur.cu  box_blur_ilp.cu
06_profiling/conjugate_gradient/: krylov.hpp  krylov_nvtx.hpp  poisson.cu  vector.cu  vector.hpp
06_profiling/conjugate_gradient_0/: krylov.hpp  krylov_nvtx.hpp  poisson.cu  vector.hpp
06_profiling/conjugate_gradient_1/: poisson.cu  vector.cu
06_profiling/conjugate_gradient_2/: krylov.hpp  poisson.cu
06_profiling/conjugate_gradient_3/: krylov.hpp  vector.cu
06_profiling/poisson_0/: poisson.cu
06_profiling/poisson_1/: cg.hpp  krylov.hpp  poisson.cu  vector.cu  vector.hpp
06_profiling/poisson_2/: cg_nvtx.hpp  krylov.hpp  poisson.cu
06_profiling/poisson_3/: cg.hpp  cg_solution.hpp  poisson.cu  readme.txt  vector.cu  vector_solution.cu
06_profiling/poisson_4/: poisson.cu
06_profiling/poisson_5/: poisson.cu
06_profiling/unstructured_mesh/: mesh.hpp  unstructured_mesh.cu  unstructured_mesh_solution.cu
common/: cuda_macros.hpp  error_checking.hpp  flush_cache.hpp  morton.hpp  pinned_allocator.hpp  span.hpp  timer.hpp  vec.hpp
